@@ -28,13 +28,14 @@ class Body_lookup
 	{
 	static short bg_table[];	// Tables of values.
 	static short si_table[];
+	static void setup();
 public:
 	static int find(int liveshape, int& deadshape, int& deadframe);
 	};
 
 
 /*
- *	Recognize dead body shapes.  +++++++Hopefully, there's a better way.
+ *	Recognize dead body shapes.
  */
 
 int Is_body
